--- a/proxy/Vagrantfile.proxy.TEMPLATE
+++ b/proxy/Vagrantfile.proxy.TEMPLATE
@@ -9,7 +9,7 @@ Vagrant.configure(2) do |config|
   config.vm.synced_folder "./../", "/vagrant", type: "nfs"
 
   config.vm.provider "virtualbox" do |v|
-    v.name = "centos-nginx"
+    v.name = "docker-centos-nginx-php-fpm"
     v.memory = 2048
     v.cpus = 2
   end
